--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          <!-- item 2 -->
          <div class="col-lg-3 col-md-6">
             <div class="template">
-               <a href="templates/aquila/index.html" class="template_thumb">
+               <a href="templates/aquila-2/index.html" class="template_thumb">
                   <img src="assets/image/aquila-2-preview.jpg" alt="">
                   <div class="template_mask">single page</div>
                </a>
@@ -47,7 +47,7 @@
          <!-- item 3 -->
          <div class="col-lg-3 col-md-6">
             <div class="template">
-               <a href="templates/aquila/index.html" class="template_thumb">
+               <a href="templates/erickson/index.html" class="template_thumb">
                   <img src="assets/image/erickson-preview.jpg" alt="">
                   <div class="template_mask">single page</div>
                </a>
@@ -59,7 +59,7 @@
          <!-- item 4 -->
          <div class="col-lg-3 col-md-6">
             <div class="template">
-               <a href="templates/aquila/index.html" class="template_thumb">
+               <a href="templates/line-furniture/index.html" class="template_thumb">
                   <img src="assets/image/line-furniture-preview.jpg" alt="">
                   <div class="template_mask">multipage eShop</div>
                </a>
@@ -71,7 +71,7 @@
          <!-- item 5 -->
          <div class="col-lg-3 col-md-6">
             <div class="template">
-               <a href="templates/aquila/index.html" class="template_thumb">
+               <a href="templates/kaya/index.html" class="template_thumb">
                   <img src="assets/image/kaya-preview.jpg" alt="">
                   <div class="template_mask">multipage eShop</div>
                </a>
