--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <div class="template_mask">single page</div>
                </a>
                <div class="template_actions">
-                  <a href="#" class="template_btn">view files</a>
+                  <a href="https://github.com/tisov/aquila" class="template_btn">view files</a>
                </div>
             </div>
          </div>
@@ -40,7 +40,7 @@
                   <div class="template_mask">single page</div>
                </a>
                <div class="template_actions">
-                  <a href="#" class="template_btn">view files</a>
+                  <a href="https://github.com/tisov/aquila-2" class="template_btn">view files</a>
                </div>
             </div>
          </div>
@@ -52,7 +52,7 @@
                   <div class="template_mask">single page</div>
                </a>
                <div class="template_actions">
-                  <a href="#" class="template_btn">view files</a>
+                  <a href="https://github.com/tisov/erickson" class="template_btn">view files</a>
                </div>
             </div>
          </div>
@@ -64,7 +64,7 @@
                   <div class="template_mask">multipage eShop</div>
                </a>
                <div class="template_actions">
-                  <a href="#" class="template_btn">view files</a>
+                  <a href="https://github.com/tisov/line-furniture" class="template_btn">view files</a>
                </div>
             </div>
          </div>
@@ -76,7 +76,7 @@
                   <div class="template_mask">multipage eShop</div>
                </a>
                <div class="template_actions">
-                  <a href="#" class="template_btn">view files</a>
+                  <a href="https://github.com/tisov/kaya" class="template_btn">view files</a>
                </div>
             </div>
          </div>
@@ -89,12 +89,12 @@
          <!-- item 1 -->
          <div class="col-lg-3 col-md-6">
             <div class="template">
-               <a href="templates/aquila/index.html" class="template_thumb">
-                  <img src="assets/image/aquila-preview.jpg" alt="">
+               <a href="http://bkdevs.000webhostapp.com" class="template_thumb">
+                  <img src="assets/image/himchistka-mebeli.png" alt="">
                   <div class="template_mask">single page</div>
                </a>
                <div class="template_actions">
-                  <a href="#" class="template_btn">view files</a>
+                  <a href="https://github.com/tisov/himchistka" class="template_btn">view files</a>
                </div>
             </div>
          </div>
