--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="template">
                <a href="templates/aquila/index.html" class="template_thumb">
                   <img src="assets/image/aquila-preview.jpg" alt="">
-                  <div class="template_mask">single page</div>
+                  <div class="template_mask">Химчистка</div>
                </a>
                <div class="template_actions">
                   <a href="https://github.com/tisov/aquila" class="template_btn">view files</a>
@@ -83,7 +83,7 @@
       </div>
       <!-- wp templates section -->
       <section class="section">
-         <h2 class="section_subtitle">-Wordpress templates-</h2>
+         <h2 class="section_subtitle">-Wordpress sites-</h2>
       </section>
       <div class="row">
          <!-- item 1 -->
