--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="template">
                <a href="templates/aquila/index.html" class="template_thumb">
                   <img src="assets/image/aquila-preview.jpg" alt="">
-                  <div class="template_mask">Химчистка</div>
+                  <div class="template_mask">single page</div>
                </a>
                <div class="template_actions">
                   <a href="https://github.com/tisov/aquila" class="template_btn">view files</a>
@@ -91,7 +91,7 @@
             <div class="template">
                <a href="http://bkdevs.000webhostapp.com" class="template_thumb">
                   <img src="assets/image/himchistka-mebeli.png" alt="">
-                  <div class="template_mask">single page</div>
+                  <div class="template_mask">furniture cleaning</div>
                </a>
                <div class="template_actions">
                   <a href="https://github.com/tisov/himchistka" class="template_btn">view files</a>
